welcome.lessons.welcome.variables.Variables.scala.code
var nbpas= 0
var dejafait= 1
while  ( nbpas < dejaFait ){
	avance();
	nbpas=nbpas+1;
}
